# pytest-playwright-ui-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  settings.toml
.github/workflows/: ruff_check.yml  run_all_tests.yml
page_objects/: main.py  main_page.py  page_creator.py  products.py  signup_details.py  signup_login.py
tests/: conftest.py  test_api.py  test_main_page.py  test_products_page.py  test_sign_up.py
